<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_black">

        <ImageView
            android:id="@+id/imageBackgroundSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:src="@drawable/logo_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewLineOneSetting"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@color/color_cod_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageBackgroundSetting" />

        <TextView
            android:id="@+id/textShareFriend"
            style="@style/TextSetting"
            android:text="@string/text_share_with_friend"
            app:drawableStartCompat="@drawable/ic_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewLineOneSetting" />

        <View
            android:id="@+id/viewLineTwoSetting"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="16dp"
            android:background="@color/color_cod_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textShareFriend" />

        <TextView
            android:id="@+id/textFeedback"
            style="@style/TextSetting"
            android:text="@string/text_feedback"
            app:drawableStartCompat="@drawable/ic_feedback"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewLineTwoSetting" />

        <View
            android:id="@+id/viewLineThreeSetting"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@color/color_cod_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFeedback" />

        <TextView
            android:id="@+id/textAboutApp"
            style="@style/TextSetting"
            android:text="@string/text_about_app"
            app:drawableStartCompat="@drawable/ic_about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewLineThreeSetting" />

        <View
            android:id="@+id/viewLineEnd"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@color/color_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textAboutApp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
