<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="homeVM"
            type="com.example.muvi.ui.home.HomeViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.43" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerBanner"
                data="@{homeVM.moviesTrending}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/guideHorizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/item_banner" />

            <View
                android:id="@+id/viewGradientTop"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_56"
                android:background="@drawable/bg_gradient_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/recyclerBanner" />

            <View
                android:id="@+id/viewGradientBottom"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_56"
                android:background="@drawable/bg_gradient_bottom"
                app:layout_constraintBottom_toBottomOf="@+id/recyclerBanner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ru.tinkoff.scrollingpagerindicator.ScrollingPagerIndicator
                android:id="@+id/pageIndicatorBanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewGradientBottom"
                app:spi_dotSelectedColor="@android:color/white" />

            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="?actionBarSize"
                android:layout_height="?actionBarSize"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_16"
                android:contentDescription="@null"
                android:src="@drawable/logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_8"
                android:contentDescription="@null"
                android:padding="@dimen/dp_16"
                android:src="@drawable/ic_my_list"
                app:layout_constraintBottom_toBottomOf="@+id/imageLogo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageLogo" />

            <TextView
                android:id="@+id/textTitleDiscovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/title_discovery"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerBanner" />

            <ImageView
                android:id="@+id/imageDiscoveryAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_16"
                android:contentDescription="@null"
                android:src="@drawable/ic_right_arrow"
                app:layout_constraintBottom_toBottomOf="@+id/textTitleDiscovery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textTitleDiscovery" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerDiscovery"
                data="@{homeVM.moviesDiscovery}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTitleDiscovery"
                tools:listitem="@layout/item_discovery" />

            <TextView
                android:id="@+id/textTitleTrending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/title_trending"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerDiscovery" />

            <ImageView
                android:id="@+id/imageTrendingAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_16"
                android:contentDescription="@null"
                android:src="@drawable/ic_right_arrow"
                app:layout_constraintBottom_toBottomOf="@+id/textTitleTrending"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textTitleTrending" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerTrending"
                data="@{homeVM.moviesTrending}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTitleTrending"
                tools:listitem="@layout/item_movie" />

            <TextView
                android:id="@+id/textTitleTopRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/title_top_rate"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerTrending" />

            <ImageView
                android:id="@+id/imageTopRateAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_16"
                android:contentDescription="@null"
                android:src="@drawable/ic_right_arrow"
                app:layout_constraintBottom_toBottomOf="@+id/textTitleTopRate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textTitleTopRate" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerTopRate"
                data="@{homeVM.moviesTopRate}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTitleTopRate"
                tools:listitem="@layout/item_movie" />

            <TextView
                android:id="@+id/textTitlePopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/title_popular"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerTopRate" />

            <ImageView
                android:id="@+id/imagePopularAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_16"
                android:contentDescription="@null"
                android:src="@drawable/ic_right_arrow"
                app:layout_constraintBottom_toBottomOf="@+id/textTitlePopular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textTitlePopular" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerPopular"
                data="@{homeVM.moviesPopular}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTitlePopular"
                tools:listitem="@layout/item_movie" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
